Fixes broken layout in newest firefox versions, Fix #82, Fix #81, Fix #80

--- a/theme/parts/buttons-fixes.css
+++ b/theme/parts/buttons-fixes.css
@@ -145,3 +145,12 @@ menulist {
 .expander-down image, .expander-up image {
 	margin: 6px !important;
 }
+
+/* Firefox 108 Toolbar Button and Alignment Fixes */
+toolbar .toolbarbutton-1 {
+	width: auto;
+  }
+  
+  #nav-bar-customization-target {
+	height: 32px;
+  }
